[package]
edition = "2021"
name = "travelplanner"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

[dev-dependencies]
criterion = "0.3"

[[bench]]
harness = false
name = "route"
